<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClinicAppCR</string>
     <string name="app_id">231029777105310</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Email">Email</string>
     <string name="Cancelar">Cancelar</string>
    <string name="enviar">enviar</string>
    <string name=" espacio"></string>   
    <string name="IPserver">http://192.168.1.2:80</string>
    <string name="Registrarse">Registrarse</string>
    <string name="already">Ya tienes cuenta! Login?</string>
    <string name="Username">Username</string>
    <string name="MisCitas">Mis Citas</string>
    <string name="Password">Password</string>
    <string name="action_crear_cita">Crear</string>
    <string name="Guardar">Guardar</string>
    <string name="Menu">Menu</string>
    <string name="Crear">Crear</string>
    <string name="action_menu_toggle">Menu</string>
    <string name="Buscar">Buscar</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="Sexo">Sexo</string>
    <string name="vr_normal_button">Ir con Waze</string>
  <string name="basic_map_demo_label">Mapa de Clinica</string>
  <string name="basic_map_demo_description">Launches a map</string>
  <string name="Login">Login</string>
    <string name="LoginTwitter">Login with Twitter</string>
  
  <string name="facebook">Facebook login</string>

</resources>
