<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    android:padding="20dip" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher" />
         
         <EditText android:id="@+id/txtUserName" android:layout_height="wrap_content" android:layout_width="fill_parent" 
             android:hint="@string/Username" android:inputType="text" />
         
         <EditText android:id="@+id/txtEmail" android:layout_marginTop="15dip" android:layout_height="wrap_content"
              android:layout_width="fill_parent" android:hint="@string/Email" android:inputType="textEmailAddress" />
         
         <EditText android:id="@+id/txtPass" android:layout_height="wrap_content" 
             android:layout_width="fill_parent" android:hint="@string/Password" android:inputType="textPassword"
             android:layout_marginTop="15dip" android:layout_marginBottom="30dip" />

         <TextView
             android:id="@+id/sexo"
             android:layout_height="wrap_content" 
             android:layout_width="fill_parent"
             android:layout_marginTop="15dip" android:layout_marginBottom="0dip"
             android:textColor="@android:color/darker_gray"
             android:text="@string/Sexo" />

         <Spinner
             android:id="@+id/spinner1"
             android:background="@android:color/white"
             android:layout_width="match_parent"
             android:layout_marginBottom="10dip"
             android:layout_height="wrap_content" />
         
         <Button
             android:id="@+id/btnRegister"
             style="@style/com_facebook_loginview_silver_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:paddingLeft="15dip"
             android:paddingRight="15dip"
             android:text="@string/enviar" />
         
         <TextView android:id="@+id/link_to_login"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="40dip"
                  android:layout_marginBottom="40dip"
                   android:text="@string/already"
                  android:gravity="center"
                  android:textSize="20sp"
                  android:textColor="#0b84aa"/>
         
         <TextView android:id="@+id/register_error"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="40dip"
                  android:layout_marginBottom="40dip"
                   
                  android:gravity="center"
                  android:textSize="20sp"
                  android:textColor="#0b84aa"/>
     
    
</LinearLayout>