<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:id="@+id/FrameLayout1"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:padding="2dip" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="185dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="190dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:text="a@gmail.com" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dip"
            android:layout_marginTop="15dip"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:text="aaaa" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/com_facebook_loginview_silver_style"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:text="@string/Login" />

        <com.facebook.widget.LoginButton
            android:id="@+id/flogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:text="@string/facebook"
            facebook:confirm_logout="false"
            facebook:fetch_user_info="true" />

        <TextView
            android:id="@+id/link_to_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dip"
            android:layout_marginTop="40dip"
            android:gravity="center"
            android:text="@string/Registrarse"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/login_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dip"
            android:layout_marginTop="40dip"
            android:gravity="center"
            android:textColor="#0b84aa"
            android:textSize="20sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</FrameLayout>